src/main/java/com/example/springboot/error/Spring/Error/SpringErrorApplication.java
package com.example.springboot.error.Spring.Error;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringErrorApplication {

	public static void main(String[] args) {
		SpringApplication.run(SpringErrorApplication.class, args);
	}

}
